Publishing PGP public keys in DNS with OPENPGPKEY.

--- a/desktop/config-files/gnupg/gpg.conf
+++ b/desktop/config-files/gnupg/gpg.conf
@@ -4,9 +4,9 @@
 #
 
 
-#----------------------------------
+#--------------------------------------
 # Default Private Key
-#----------------------------------
+#--------------------------------------
 
 # Use name as the default key to sign with. If this option is not used, the
 # default key is the first key found in the secret keyring. Note that -u or
@@ -29,9 +29,9 @@ default-recipient-self
 #no-default-recipient
 
 
-#----------------------------------
+#--------------------------------------
 # List Options
-#----------------------------------
+#--------------------------------------
 
 # This is a space or comma delimited string that gives options used when listing
 # keys and signatures.
@@ -68,10 +68,7 @@ default-recipient-self
 #   show-unusable-subkeys
 #       Show revoked and expired subkeys in key listings. Defaults to no.
 #   show-keyring
-#       Display the keyring name at the head of key listings to show which
-#       keyring a given key resides on. Defaults to no.
-#   show-sig-expire
-#       Show signature expiration dates (if any) during --check-signatures
+#       Display the keyring photoration dates (if any) during --check-signatures
 #       listings. Defaults to no.
 #   show-sig-subpackets
 #       Include signature subpackets in the key listing. This option can take an
@@ -82,12 +79,12 @@ default-recipient-self
 #       For each valid user-id which also has a valid mail address print only
 #       the fingerprint and the mail address.
 #
-list-options show-photos show-uid-validity
+list-options show-uid-validity
 
 
-#----------------------------------
+#--------------------------------------
 # Verify Options
-#----------------------------------
+#--------------------------------------
 
 # This is a space or comma delimited string that gives options used when
 # verifying signatures. Options can be prepended with a `no-' to give the
@@ -121,15 +118,15 @@ list-options show-photos show-uid-validity
 #   pka-trust-increase
 #       Raise the trust in a signature to full if the signature passes PKA
 #       validation. This option is only meaningful if pka-lookups is set.
-verify-options show-photos show-uid-validity
+verify-options pka-lookups pka-trust-increase show-uid-validity
 
 # Use this program to display photo user IDs
 #photo-viewer xloadimage -fork -quiet -title 'KeyID 0x%k' STDIN
 
 
-#----------------------------------
+#--------------------------------------
 # Charset Options
-#----------------------------------
+#--------------------------------------
 
 # Display output UTF-8 encoded
 display-charset utf-8
@@ -138,9 +135,9 @@ display-charset utf-8
 utf8-strings
 
 
-#----------------------------------
+#--------------------------------------
 # Certification Level
-#----------------------------------
+#--------------------------------------
 
 # When making a key signature, prompt for a certification level. If this option
 # is not specified, the certification level used is set via
@@ -186,9 +183,9 @@ ask-cert-level
 #trusted-key long key ID
 
 
-#----------------------------------
+#--------------------------------------
 # Trust model
-#----------------------------------
+#--------------------------------------
 
 # Set what trust model GnuPG should follow.
 trust-model tofu+pgp
@@ -207,9 +204,9 @@ trust-model tofu+pgp
 tofu-default-policy unknown
 
 
-#----------------------------------
+#--------------------------------------
 # Key retrieval and methods
-#----------------------------------
+#--------------------------------------
 
 # Automatically locate and retrieve keys as needed.
 # The default is "local,wkd".
@@ -223,15 +220,15 @@ auto-key-locate local
 # Available since GnuPG 2.1.12
 auto-key-locate wkd
 
-# Locate a key using DNS CERT, as specified in RFC-4398.
-auto-key-locate cert
-
 # Locate a key using DNS PKA.
 auto-key-locate pka
 
 # Locate a key using DANE, as specified in draft-ietf-dane-openpgpkey-05.txt.
 # Available since GnuPG 2.2.1
 auto-key-locate dane
+
+# Locate a key using DNS CERT, as specified in RFC-4398.
+auto-key-locate cert
 
 # Locate a key using whatever keyserver is defined using the --keyserver option.
 auto-key-locate keyserver
@@ -241,35 +238,27 @@ auto-key-locate keyserver
 # Universal method of checking 'ldap://keys.(thedomain)'.
 auto-key-locate ldap
 
-# The option --no-auto-key-locate or the mechanism "clear" resets the list. 
+# The option --no-auto-key-locate or the mechanism "clear" resets the list.
 #no-auto-key-locate
 #auto-key-locate clear
 
 # Enable automatic retrieving of unknown keys when verifying signatures.
-auto-key-retrieve 
+auto-key-retrieve
 
 
-#----------------------------------
+#--------------------------------------
 # Key-ID Display Option
-#----------------------------------
+#--------------------------------------
 
 # Always display long key IDs. Short key IDs can be spoofed.
 # Default: short
 keyid-format 0xlong
 
 
-#----------------------------------
-# Key Server
-#----------------------------------
 
-# This option is deprecated - please use the --keyserver in `dirmngr.conf'
-# instead.
-#keyserver name
-
-
-#----------------------------------
+#--------------------------------------
 # Key Server Options
-#----------------------------------
+#--------------------------------------
 
 # This is a space or comma delimited string that gives options for the
 # keyserver. Options can be prefixed with a `no-' to give the opposite meaning.
@@ -289,9 +278,6 @@ keyid-format 0xlong
 #       When searching for a key with --search-keys, include keys that are
 #       marked on the keyserver as disabled. Note that this option is not used
 #       with HKP keyservers.
-#   auto-key-retrieve
-#       This is an obsolete alias for the option auto-key-retrieve. Please do
-#       not use it; it will be removed in future versions..
 #   honor-keyserver-url
 #       When using --refresh-keys, if the key in question has a preferred
 #       keyserver URL, then use that preferred keyserver to refresh the key
@@ -315,35 +301,20 @@ keyid-format 0xlong
 #       For example, when retrieving multiple keys via --receive-keys, the
 #       timeout applies separately to each key retrieval, and not to the
 #       --receive-keys command as a whole. Defaults to 30 seconds.
-#   http-proxy=value
-#       This option is deprecated. Set the proxy to use for HTTP and HKP
-#       keyservers. This overrides any proxy defined in `dirmngr.conf'.
-#   verbose
-#       This option has no more function since GnuPG 2.1. Use the dirmngr
-#       configuration options instead.
-#   debug
-#       This option has no more function since GnuPG 2.1. Use the dirmngr
-#       configuration options instead.
-#   check-cert
-#       This option has no more function since GnuPG 2.1. Use the dirmngr
-#       configuration options instead.
-#   ca-cert-file
-#       This option has no more function since GnuPG 2.1. Use the dirmngr
-#       configuration options instead.
 keyserver-options include-revoked
 
 
-#----------------------------------
+#--------------------------------------
 # Output Display Options
-#----------------------------------
+#--------------------------------------
 
 # Suppress the initial copyright message.
 no-greeting
 
 
-#----------------------------------
+#--------------------------------------
 # Key related options
-#----------------------------------
+#--------------------------------------
 
 # Encrypt for user id name. Same as --recipient but this one is intended for use
 # in the options file and may be used with your own user-id as an
@@ -371,9 +342,9 @@ no-greeting
 try-secret-key 0x0123456789ABCDEF
 
 
-#----------------------------------
+#--------------------------------------
 # Input and Output
-#----------------------------------
+#--------------------------------------
 
 # This filter drops the selected key signatures on user ids. Self-signatures are
 # not considered. Currently only implemented for --import-filter.
@@ -394,9 +365,9 @@ with-fingerprint
 #with-subkey-fingerprint
 
 
-#----------------------------------
+#--------------------------------------
 # OpenPGP protocol specific options
-#----------------------------------
+#--------------------------------------
 
 # List of personal ciphers algorithms
 # Set the list of personal cipher preferences to string. Use gpg --version to
@@ -426,19 +397,19 @@ personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 personal-compress-preferences BZIP2 ZLIB ZIP Uncompressed
 
 # Use name as the cipher algorithm for symmetric encryption with a passphrase if
-# --personal-cipher-preferences and --cipher-algo are not given. 
+# --personal-cipher-preferences and --cipher-algo are not given.
 # The default is AES-128
 s2k-cipher-algo AES256
 
 # Use name as the digest algorithm used to mangle the passphrases for symmetric
-# encryption. 
+# encryption.
 # The default is SHA-1
 s2k-digest-algo SHA256
 
 
-#----------------------------------
+#--------------------------------------
 # Compliance options
-#----------------------------------
+#--------------------------------------
 
 # These options control what GnuPG is compliant to. Only one of these options
 # may be active at a time. Note that the default setting of this is nearly
