Added gpg-applet and more on public key distribution

--- a/desktop/config-files/gnupg/dirmngr.conf
+++ b/desktop/config-files/gnupg/dirmngr.conf
@@ -1,29 +1,29 @@
 #
-# Options for dirmngr (GnuPG) 2.2.12
+# Options for dirmngr (GnuPG) 2.2.19
 #
 # See the 'OPTIONS' section of 'man dirmngr'
-#
+# https://manpages.ubuntu.com/manpages/focal/en/man8/dirmngr.8.html#options
 
 # The option --use-tor switches Dirmngr and thus GnuPG into ``Tor mode'' to
 # route all network access via Tor (an anonymity network). Certain other
 # features are disabled in this mode. The effect of --use-tor cannot be
 # overridden by any other command or even be reloading gpg-agent. The use of
-# --no-use-tor disables the use of Tor. 
+# --no-use-tor disables the use of Tor.
 # The default is to use Tor if it is available on startup or after reloading
 # dirmngr.
 use-tor
 
-# Use name as your keyserver. This is the server that gpg communicates with to
-# receive keys, send keys, and search for keys. 
-#
+# Use name as your keyserver. This are the servers that gpg communicates with to
+# receive keys, send keys, and search for keys.
+#pgp
 # The format of the name is a URI: `scheme:[//]keyservername[:port]' The scheme
 # is the type of keyserver: "hkp" for the HTTP (or compatible) keyservers,
-# "ldap" for the LDAP keyservers, or "mailto" for the Graff email keyserver. 
+# "ldap" for the LDAP keyservers, or "mailto" for the Graff email keyserver.
 #
 # Note that your particular installation of GnuPG may have other keyserver types
-# available as well. 
+# available as well.
 #
-# Keyserver schemes are case-insensitive. 
+# Keyserver schemes are case-insensitive.
 #
 # After the keyserver name, optional keyserver configuration options may be
 # provided. These are the same as the --keyserver-options of gpg, but apply only
@@ -39,25 +39,19 @@ use-tor
 # locally running or not. The check for a running Tor is done for each new
 # connection.
 #
-# If no keyserver is explicitly configured, dirmngr will use the built-in
-# default of hkps://hkps.pool.sks-keyservers.net.
-
-# Onion Service for your own keyserver keyserver.example.net
-#keyserver hkp://duskgytldkxiuqc6.onion
+# Debian and Ubuntu related Linux distributions use hkps://keys.openpgp.org as
+# built-in default, which is automatically used, when no other key-server has
+# been set. Others may use hkps://hkps.pool.sks-keyservers.net as their default.
 
 # Onion Service for keys.openpgp.org
 keyserver hkp://zkaan2xfbuxia2wpf7ofnkbz6r5zdbbvxbunvp5g2iebopbfc4iqmbad.onion
 
 # Onion Service for pool.sks-keyservers.net
-keyserver hkp://jirk5u4osbsr34t5.onion 
-
-# Your own keyserver
-#keyserver hkps://keyserver.example.net
+keyserver hkp://jirk5u4osbsr34t5.onion
 
 # Others
-keyserver hkps://keys.openpgp.org 
+keyserver hkps://keys.openpgp.org
 keyserver hkps://keys.mailvelope.com
 keyserver hkps://pgp.mailbox.org
+keyserver hkps://keyserver.ubuntu.com/
 keyserver hkps://hkps.pool.sks-keyservers.net
-
-# -*- mode: ini; tab-width: 4; indent-tabs-mode: nil -*-
