Removed Monekysphere, split-up gpg in separate files.

--- a/desktop/config-files/gnupg/gpg.conf
+++ b/desktop/config-files/gnupg/gpg.conf
@@ -1,7 +1,7 @@
 #
 # Options for gpg (GnuPG) 2.2.12
 # See the 'OPTIONS' section of 'man gpg'
-#
+#   https://manpages.ubuntu.com/manpages/bionic/man1/gpg.1.html#options
 
 
 #--------------------------------------
@@ -14,7 +14,7 @@
 # In this case, the last key for which a secret key is available is used. If
 # there is no secret key available for any of the specified values, GnuPG will
 # not emit an error message but continue as if this option wasn't given.
-#default-key 0x0123456789ABCDEF
+default-key 0x0123456789ABCDEF
 
 # Use name as default recipient if option --recipient is not used and don't ask
 # if this is a valid one. name must be non-empty.
@@ -118,7 +118,7 @@ list-options show-uid-validity
 #   pka-trust-increase
 #       Raise the trust in a signature to full if the signature passes PKA
 #       validation. This option is only meaningful if pka-lookups is set.
-verify-options pka-lookups pka-trust-increase show-uid-validity
+verify-options show-policy-urls show-std-notations show-keyserver-urls show-uid-validity show-primary-uid-only pka-lookups pka-trust-increase
 
 # Use this program to display photo user IDs
 #photo-viewer xloadimage -fork -quiet -title 'KeyID 0x%k' STDIN
@@ -255,7 +255,6 @@ auto-key-retrieve
 keyid-format 0xlong
 
 
-
 #--------------------------------------
 # Key Server Options
 #--------------------------------------
@@ -301,7 +300,7 @@ keyid-format 0xlong
 #       For example, when retrieving multiple keys via --receive-keys, the
 #       timeout applies separately to each key retrieval, and not to the
 #       --receive-keys command as a whole. Defaults to 30 seconds.
-keyserver-options include-revoked
+keyserver-options honor-keyserver-url honor-pka-record include-subkeys
 
 
 #--------------------------------------
@@ -473,6 +472,6 @@ default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 BZIP
 # Set the default keyserver URL to name. This keyserver will be used as the
 # keyserver URL when writing a new self-signature on a key, which includes key
 # generation and changing preferences.
-#default-keyserver-url hkps://pgpkeys.urown.net
+default-keyserver-url hkps://keys.openpgp.org
 
 # -*- mode: ini; tab-width: 4; indent-tabs-mode: nil -*-
