CHG powerdns database

--- a/server/dns/config/mariadb.conf
+++ b/server/dns/config/mariadb.conf
@@ -4,10 +4,10 @@
 launch=gmysql
 
 # gmysql parameters
-#gmysql-host=localhost
-#gmysql-port=
+gmysql-host=localhost
+# gmysql-port=
 gmysql-dbname=pdns
 gmysql-user=pdns
 gmysql-password=********
 gmysql-dnssec=yes
-gmysql-socket=/var/run/mysqld/mysqld.sock
+# gmysql-socket=/var/run/mysqld/mysqld.sock
