CHG pdns IP addresses in config

--- a/server/dns/config/pdns-master.conf
+++ b/server/dns/config/pdns-master.conf
@@ -7,7 +7,7 @@
 #################################
 # allow-axfr-ips        Allow zonetransfers only to these subnets
 #
- allow-axfr-ips=127.0.0.1 ::1 192.0.2.0/24
+ allow-axfr-ips=192.0.2.42, 2001:db8::42
 
 #################################
 # allow-dnsupdate-from  A global setting to allow DNS updates from these IP ranges.
@@ -279,7 +279,7 @@ launch=
 #################################
 # local-address Local IP addresses to which we bind
 #
-# local-address=0.0.0.0, ::
+local-address=192.0.2.41, 2001:db8::41
 
 #################################
 # local-address-nonexist-fail   Fail to start if one or more of the local-address's do not exist on this server
