CHG pdns zone management

--- a/server/dns/config/pdns-master.conf
+++ b/server/dns/config/pdns-master.conf
@@ -539,7 +539,7 @@ setuid=pdns
 #################################
 # slave-cycle-interval  Schedule slave freshness checks once every .. seconds
 #
-# slave-cycle-interval=60
+slave-cycle-interval=60
 
 #################################
 # slave-renotify        If we should send out notifications for slaved updates
