--- a/server/config-files/etc/systemd/system/redis-server@.service
+++ b/server/config-files/etc/systemd/system/redis-server@.service
@@ -30,6 +30,8 @@
 Description=Advanced key-value store (%I)
 After=network.target
 Documentation=http://redis.io/documentation, man:redis-server(1)
+Wants=sys-devices-virtual-net-wg0.device
+After=sys-devices-virtual-net-wg0.device
 
 [Service]
 Type=forking
